syntax = "proto3";
package canine_chain.storage;

import "gogoproto/gogo.proto";

option go_package = "github.com/jackalLabs/canine-chain/x/storage/types";

message Params {
  option (gogoproto.goproto_stringer) = false;
  
  string deposit_account = 1;
  int64 proof_window = 2;
  int64 chunk_size = 3; // Chunk size of a file is divided into, min 1
  int64 misses_to_burn = 4;
  string price_feed = 5;
  int64 max_contract_age_in_blocks = 6; // Life span of a contract in blocks
  int64 price_per_tb_per_month = 7;
  int64 attestFormSize = 8; // TODO: fix casing
  int64 attestMinToPass = 9; // TODO: fix casing
  int64 collateralPrice = 10; // TODO: fix casing
  int64 check_window = 11;

  int64 pol_ratio = 12 [ (gogoproto.moretags) = "yaml:\"pol_ratio\"" ]; // default 40
  int64 referral_commission = 13 [ (gogoproto.moretags) = "yaml:\"referral_commission\"" ]; // default 25

}
